--- a/frontend/src/styles/article.scss
+++ b/frontend/src/styles/article.scss
@@ -2,11 +2,19 @@
   margin-bottom: 60px;
 
   img {
-    width: 100%;
+    max-width: 100%;
   }
 
 }
 
 h4 {
+  font-weight: bold;
   font-size: 2.4rem;
+  margin-top: 30px;
+  margin-bottom: 10px;
+}
+
+img {
+  display: block;
+  margin: 20px auto;
 }
