--- a/landing/src/main.css
+++ b/landing/src/main.css
@@ -216,6 +216,117 @@ section {
   text-align: left;
 }
 
+.cross-border-top {
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+  padding-top: 115px;
+  margin-bottom: 86px;
+}
+
+.cross-border-hero-description {
+  text-align: left;
+}
+
+.cross-border-hero-description > h2 {
+  font-weight: 300;
+  font-size: 24px;
+  line-height: 40px;
+  text-transform: uppercase;
+  color: #d94a3d;
+}
+
+.cross-border-hero-description > p {
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 27px;
+  color: #636363;
+}
+
+.cross-border-hero-img {
+  width: 274px;
+}
+
+.cross-border-register {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 68px;
+}
+
+.cross-border-register > p {
+  color: #d94a3d;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 24px;
+  margin-right: 25px;
+}
+
+.cross-border-benefit-section {
+  background: #fff6f4;
+  padding-top: 40px;
+  max-width: 100%;
+  padding-bottom: 40px;
+}
+.cross-border-benefit-content {
+  width: 100%;
+  max-width: 956px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cross-border-benefit-content > h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: left;
+  color: #011f26;
+  margin-bottom: 24px;
+}
+
+.cross-border-benefit-list {
+  display: flex;
+}
+
+.benefit-item {
+  background: #ffffff;
+  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
+  width: 307px;
+  height: 307px;
+  padding-top: 24px;
+}
+
+.benefit-item:nth-child(2) {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.benefit-item-image {
+  width: 132px;
+  height: 132px;
+  margin-bottom: 20px;
+}
+
+.benefit-item-title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 27px;
+  text-align: center;
+  margin-bottom: 16px;
+  color: #011f26;
+}
+
+.benefit-item-description {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 28px;
+  text-align: center;
+  color: #636363;
+}
+
 .hero-description {
   position: relative;
   width: 540px;
