--- a/landing/src/main.css
+++ b/landing/src/main.css
@@ -327,6 +327,82 @@ section {
   color: #636363;
 }
 
+.cross-border-service-type {
+  padding-top: 80px;
+  margin-bottom: 80px;
+}
+
+.cross-border-service-type h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 40px;
+  color: #011f26;
+}
+
+.cross-border-promo-title {
+  text-align: left;
+  margin-bottom: 16px;
+}
+
+.cross-border-promo-description {
+  margin-bottom: 74px;
+  text-align: left;
+}
+
+.cross-border-service-title {
+  margin-bottom: 32px;
+}
+
+.cross-border-process-section {
+  margin-bottom: 80px;
+}
+
+.flow-chart {
+  display: flex;
+}
+
+.flow-node {
+  position: relative;
+  width: 240px;
+  height: 180px;
+  padding: 32px 24px;
+  background: #ffffff;
+  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
+}
+
+.flow-node:after {
+  content: '';
+  position: absolute;
+  width: 0;
+  height: 0;
+  right: -20px;
+  bottom: 0;
+  border-left: 20px solid;
+  border-top: 90px solid transparent;
+  border-bottom: 90px solid transparent;
+  z-index: 1;
+  background-color: #ffffff;
+  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
+}
+
+.flow-node h2 {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 24px;
+  color: #011f26;
+  text-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
+  margin-bottom: 18px;
+}
+
+.flow-node p {
+  font-style: normal;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 21px;
+  color: #828282;
+}
+
 .hero-description {
   position: relative;
   width: 540px;
