--- a/landing/src/main.css
+++ b/landing/src/main.css
@@ -362,28 +362,28 @@ section {
   display: flex;
 }
 
+.flow-node-wrapper {
+  filter: drop-shadow(crimson 0px 0px 0.75rem);
+}
+
 .flow-node {
   position: relative;
   width: 240px;
   height: 180px;
-  padding: 32px 24px;
+  padding: 32px 10px 32px 50px;
   background: #ffffff;
-  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
+  filter: drop-shadow(rgba(0, 0, 0, 0.1) 0px 0px 0.75rem);
 }
 
 .flow-node:after {
   content: '';
   position: absolute;
-  width: 0;
-  height: 0;
-  right: -20px;
-  bottom: 0;
-  border-left: 20px solid;
-  border-top: 90px solid transparent;
-  border-bottom: 90px solid transparent;
-  z-index: 1;
+  width: 40px;
+  height: 180px;
+  top: 0;
+  right: -40px;
   background-color: #ffffff;
-  box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
+  clip-path: polygon(0 0, 40px 90px, 0 180px);
 }
 
 .flow-node h2 {
@@ -393,6 +393,7 @@ section {
   color: #011f26;
   text-shadow: 0px 0px 16px rgba(0, 0, 0, 0.1);
   margin-bottom: 18px;
+  text-align: left;
 }
 
 .flow-node p {
@@ -401,6 +402,7 @@ section {
   font-size: 14px;
   line-height: 21px;
   color: #828282;
+  text-align: left;
 }
 
 .hero-description {
