--- a/landing/src/main.css
+++ b/landing/src/main.css
@@ -338,6 +338,80 @@ section {
   font-size: 28px;
   line-height: 40px;
   color: #011f26;
+  margin-bottom: 32px;
+}
+
+.talent-container {
+  max-width: 956px;
+  width: 100%;
+  height: 406px;
+  display: flex;
+}
+
+.talent-description {
+  max-width: 487px;
+  width: 100%;
+  background-color: #D94A3D;
+  position: relative;
+}
+
+.talent-description:after {
+  content: '';
+  background-color: #D94A3D;
+  position: absolute;
+  width: 147px;
+  height: 406px;
+  top: 0;
+  right: -147px;
+  clip-path: polygon(0 0, 147px 0, 0 406px);
+}
+
+.talent-intro {
+  flex: 1;
+  width: 100%;
+  background-image: url('/assets/images/jiayun.png');
+}
+
+.talent-description {
+  text-align: left;
+  padding-top: 22px;
+  padding-left: 27px;
+}
+
+.talent-description h3 {
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 28px;
+  color: #FFFFFF;
+  margin-bottom: 16px;
+}
+
+.talent-description h2 {
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 42px;
+  color: #FFFFFF;
+  margin-bottom: 71px;
+}
+
+.talent-description p {
+  font-weight: normal;
+  font-size: 20px;
+  line-height: 28px;
+  color: #FFFFFF;
+}
+
+.talent-category {
+  margin-top: 104px;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 28px;
+  text-align: left;
+  color: #FFFFFF;
+}
+
+.talent-category span {
+  margin-right: 16px;
 }
 
 .cross-border-promo-title {
@@ -356,6 +430,15 @@ section {
 
 .cross-border-process-section {
   margin-bottom: 80px;
+}
+
+.cross-border-process-section > h2 {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 28px;
+  line-height: 40px;
+  color: #011f26;
+  margin-bottom: 32px;
 }
 
 .flow-chart {
