--- a/landing/src/main.css
+++ b/landing/src/main.css
@@ -369,7 +369,12 @@ section {
 .talent-intro {
   flex: 1;
   width: 100%;
-  background-image: url('/assets/images/jiayun.png');
+}
+
+.talent-img {
+  width: 100%;
+  height: 406px;
+  object-fit: cover;
 }
 
 .talent-description {
