--- a/landing/src/main.css
+++ b/landing/src/main.css
@@ -295,6 +295,10 @@ section {
   width: 307px;
   height: 307px;
   padding-top: 24px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .benefit-item:nth-child(2) {
@@ -329,7 +333,7 @@ section {
 
 .cross-border-service-type {
   padding-top: 80px;
-  margin-bottom: 80px;
+  margin-bottom: 32px;
 }
 
 .cross-border-service-type h2 {
@@ -364,11 +368,40 @@ section {
   top: 0;
   right: -147px;
   clip-path: polygon(0 0, 147px 0, 0 406px);
+  z-index: 3;
 }
 
 .talent-intro {
   flex: 1;
   width: 100%;
+  position: relative;
+  z-index: 1;
+}
+
+.talent-intro-float-wrapper {
+  position: absolute;
+  left: 0;
+  bottom: 20px;
+  width: 100%;
+  height: 114px;
+  background: rgba(51, 51, 51, 0.9);
+  color: #FFFFFF;
+  z-index: 2;
+  padding-top: 16px;
+  padding-left: 90px;
+}
+
+.talent-intro-float-wrapper h3,
+.talent-intro-float-wrapper p {
+  font-size: 14px;
+  line-height: 21px;
+  text-align: left;
+  width: 330px;
+}
+
+.talent-intro-float-wrapper h3 {
+  font-weight: bold;
+  margin-bottom: 10px;
 }
 
 .talent-img {
@@ -441,11 +474,60 @@ section {
 .cross-border-promo-title {
   text-align: left;
   margin-bottom: 16px;
+  max-width: 634px;
+  width: 100%;
+  margin: auto;
 }
 
 .cross-border-promo-description {
   margin-bottom: 74px;
   text-align: left;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 26px;
+  color: #636363;
+  display: flex;
+  justify-content: center;
+  max-width: 631px;
+  width: 100%;
+  margin: auto;
+  margin-bottom: 60px;
+}
+
+.cross-border-service-category {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.service-category-item {
+  margin-bottom: 36px;
+}
+
+.service-category-item img {
+  width: 225px;
+  height: 140px;
+  margin-bottom: 8px;
+}
+
+.service-category-item h2 {
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+  color: #011F26;
+  margin-bottom: 4px;
+  justify-content: center;
+}
+.service-category-item p {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 22px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #828282;
 }
 
 .cross-border-service-title {
