--- a/landing/src/main.css
+++ b/landing/src/main.css
@@ -285,6 +285,17 @@ section {
   margin-bottom: 24px;
 }
 
+.cross-border-benefit-intro p {
+  display: none;
+  margin: auto;
+  text-align: left;
+  margin-bottom: 20px;
+  width: 70%;
+  font-size: 16px;
+  line-height: 28px;
+  color: #636363;
+}
+
 .cross-border-benefit-list {
   display: flex;
 }
@@ -355,13 +366,13 @@ section {
 .talent-description {
   max-width: 487px;
   width: 100%;
-  background-color: #D94A3D;
+  background-color: #d94a3d;
   position: relative;
 }
 
 .talent-description:after {
   content: '';
-  background-color: #D94A3D;
+  background-color: #d94a3d;
   position: absolute;
   width: 147px;
   height: 406px;
@@ -385,7 +396,7 @@ section {
   width: 100%;
   height: 114px;
   background: rgba(51, 51, 51, 0.9);
-  color: #FFFFFF;
+  color: #ffffff;
   z-index: 2;
   padding-top: 16px;
   padding-left: 90px;
@@ -421,7 +432,7 @@ section {
   font-weight: normal;
   font-size: 20px;
   line-height: 28px;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 16px;
 }
 
@@ -429,7 +440,7 @@ section {
   font-weight: bold;
   font-size: 48px;
   line-height: 42px;
-  color: #FFFFFF;
+  color: #ffffff;
   margin-bottom: 71px;
 }
 
@@ -437,7 +448,7 @@ section {
   font-weight: normal;
   font-size: 20px;
   line-height: 28px;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .talent-category {
@@ -446,7 +457,7 @@ section {
   font-size: 20px;
   line-height: 28px;
   text-align: left;
-  color: #FFFFFF;
+  color: #ffffff;
   position: absolute;
   left: 24px;
   bottom: 32px;
@@ -454,7 +465,7 @@ section {
 
 .talent-category button {
   margin-right: 16px;
-  background-color: #D94A3D;
+  background-color: #d94a3d;
   color: rgba(255, 255, 255, 0.6);
   font-style: normal;
   font-weight: bold;
@@ -467,7 +478,7 @@ section {
 .talent-category button.selected,
 .talent-category button:hover,
 .talent-category button:focus {
-  color: #FFFFFF;
+  color: #ffffff;
   text-decoration: underline;
 }
 
@@ -516,7 +527,7 @@ section {
   line-height: 26px;
   display: flex;
   align-items: center;
-  color: #011F26;
+  color: #011f26;
   margin-bottom: 4px;
   justify-content: center;
 }
@@ -1954,6 +1965,128 @@ li > img {
 
   .lang-toggle {
     right: 0;
+  }
+
+  .cross-border-top {
+    flex-direction: column-reverse;
+    margin-bottom: 49px;
+  }
+
+  .cross-border-hero-img {
+    margin-bottom: 32px;
+  }
+
+  .cross-border-hero-description h2 {
+    display: none;
+  }
+
+  .cross-border-hero-description h1.top-title {
+    display: block;
+  }
+
+  .cross-border-hero-description p {
+    text-align: center;
+  }
+
+  .cross-border-register {
+    flex-direction: column;
+  }
+
+  .cross-border-register p {
+    margin-bottom: 16px;
+  }
+
+  .cross-border-benefit-content > h2 {
+    text-align: center;
+  }
+
+  .cross-border-benefit-intro p {
+    display: block;
+  }
+
+  .cross-border-benefit-list {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .benefit-item {
+    width: 85%;
+    margin-bottom: 24px;
+    padding: 24px;
+  }
+
+  .talent-container {
+    flex-direction: column-reverse;
+    align-items: center;
+    height: auto;
+  }
+
+  .talent-intro-float-wrapper {
+    padding-left: 16px;
+  }
+
+  .talent-intro-float-wrapper h3,
+  .talent-intro-float-wrapper p {
+    max-width: 100%;
+  }
+
+  .talent-intro {
+    max-width: 487px;
+  }
+
+  .talent-img {
+    height: auto;
+  }
+
+  .talent-description:after {
+    display: none;
+  }
+
+  .talent-service-wrapper {
+    height: 72px;
+  }
+
+  .talent-category {
+    position: relative;
+    left: 0;
+  }
+
+  .cross-border-service-category {
+    justify-content: center;
+  }
+
+  .service-category-item:nth-child(2n) {
+    margin-left: 8px;
+  }
+
+  .flow-chart {
+    align-items: center;
+    flex-direction: column;
+  }
+
+  .flow-node {
+    width: 342px;
+    padding-top: 50px;
+  }
+
+  .flow-node:after {
+    width: 100%;
+    bottom: -40px;
+    top: 180px;
+    right: 0;
+    clip-path: polygon(0 0, 171px 20px, 342px 0);
+  }
+
+  .mc_embed_signup--input-container {
+    flex-direction: column;
+    align-items: center;
+  }
+  .mc_embed_signup--input-email {
+    margin-bottom: 24px;
+  }
+  .mc_embed_signup--input-name,
+  .mc_embed_signup--input-email {
+    width: 100%;
   }
 }
 
